signup.js modified

--- a/views/signup.html
+++ b/views/signup.html
@@ -31,7 +31,7 @@
                 <input id = "email" placeholder = "이메일을 입력하세요">
             </div>
             <br>
-            <button type = "submit" id = "signUpBtn">회원가입</button>
+            <button type = "button" id = "signUpBtn">회원가입</button>
         </form>
     </div>
 </body>
