--- a/views/login.html
+++ b/views/login.html
@@ -11,8 +11,8 @@
     <div>
         <form action="">
             <div>
-                <label for = "id">ID : </label>
-                <input id = "id" placeholder = "ID를 입력하세요">
+                <label for = "userid">ID : </label>
+                <input id = "userid" placeholder = "ID를 입력하세요">
             </div>
             <div>
                 <label for = "pwd">비밀번호 : </label>
