test don't touch

--- a/views/maintest.pug
+++ b/views/maintest.pug
@@ -14,3 +14,7 @@ html
         br
         input(type='button' value='회원가입' id='signup')
         input(type='button' value='로그인' id='login')
+
+        if(loginstate)
+            dir #{id} 님이 로그인하셨습니다.
+        
