--- a/views/login.pug
+++ b/views/login.pug
@@ -5,8 +5,13 @@ html
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title 로그인
-
 body
+    if(message=="iderror")
+        script.
+            alert('id를 확인해주세요')
+    if(message=="pwerror")
+        script.
+            alert('pw를 확인해주세요')
     div
     form(action='login'  method='POST')
         div
@@ -17,3 +22,4 @@ body
             input#pwd(name='pwd' type='password' require placeholder='비밀번호를 입력하세요')
         br
         button#logInBtn(type='submit') 로그인
+    
