--- a/views/maintest.pug
+++ b/views/maintest.pug
@@ -7,14 +7,21 @@ html
         title Test
         script(src='./maintest.js' defer)
     body
-        br
-        b
-            p(size='5' color='gray') 회원가입 및 로그인
-        br
-        br
-        input(type='button' value='회원가입' id='signup')
-        input(type='button' value='로그인' id='login')
+        if(!loginstate)
+            br
+            b
+                p(size='5' color='gray') 회원가입 및 로그인
+            br
+            br
+            input(type='button' value='회원가입' id='signup')
+            input(type='button' value='로그인' id='login')
 
-        if(loginstate)
+        if(loginstate == "okay")
+            br
+            b
+                p(size='5' color='gray') 로그인 성공
+            br
             dir #{id} 님이 로그인하셨습니다.
+            form(id="logoutbtn" action='/logout' method='POST')
+                button#logoutBtn(type='submit') 로그아웃
         
