--- a/views/signup.pug
+++ b/views/signup.pug
@@ -5,7 +5,7 @@ html
         meta(http-equiv='X-UA-Compatible' content='IE=edge')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         title 회원가입
-        script(src='./signup.js' defer)
+        script(src='/js/signup.js' defer)
         script(src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js")
         link(rel='stylesheet' type='text/css' href='../css/signup.css')
     body
