--- a/views/maintest.pug
+++ b/views/maintest.pug
@@ -5,7 +5,7 @@ html
         meta(http-equiv='X-UA-Compatible' content='IE=edge')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         title Test
-        script(src='./maintest.js' defer)
+        script(src='./js/maintest.js' defer)
     body
         if(!loginstate)
             br
