--- a/views/page.pug
+++ b/views/page.pug
@@ -14,10 +14,9 @@ html
                     td 수정일
                     td 등록일
                 
-                -for(var i = page * page_num) - page_num; i<(page + page_num); i++)
+                -for(var i = (page * page_num) - page_num; i<(page + page_num); i++)
                     -if(i > length) i++
-
-                    -else if var data = rows[i]
+                    -else var data = rows[i]
                         tr
                             td #{i + 1}
                             td #{data.name}
