--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ header
       li
         a(href='#') &#xCE90;&#xB9AD;&#xD130;&#xC2A4;&#xD0A8;
       li
-        a(href='#') &#xCEE4;&#xBBA4;&#xB2C8;&#xD2F0;
+        a(href='/board/list') &#xCEE4;&#xBBA4;&#xB2C8;&#xD2F0;
     ul.nav_signUp
       if(!loginstate)
         li
