--- a/views/list.pug
+++ b/views/list.pug
@@ -1,10 +1,16 @@
 doctype html
 html(lang="en")
     head
+        meta(charset='UTF-8')
+        meta(http-equiv='X-UA-Compatible' content='IE=edge')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
         title #{title}
     body 
         h1 #{title}
-        a(href='/board/write') 글쓰기
+        if(!loginstate)
+            a(href='/') main 
+        if(loginstate=='okay')
+            a(href='/board/write') 글쓰기
         table(border='1')
             tbody
                 tr 
