--- a/views/page.pug
+++ b/views/page.pug
@@ -14,8 +14,9 @@ html
                     td 수정일
                     td 등록일
                 
-                -for(var i = (page * page_num) - page_num; i<(page + page_num); i++)
-                    -if(i > length) i++
+                -for(var i = (page * page_num) - page_num; i<(page * page_num); i++)
+                    -if(i > length) 
+                        -var data = {}
                     -else var data = rows[i]
                         tr
                             td #{i + 1}
@@ -25,8 +26,7 @@ html
                             td #{data.hit}
                             td #{data.modidate}
                             td #{data.regdate}
-                        tr
-                            td(colspan='6')
-                                -for (var j = 0; j < rows.length / page_num; j++) [
-                                |    a(href='/board/page/' + (j + 1)) j + 1
-                                |]
+                tr
+                    td(colspan='6')
+                        -for (var j = 0; j < rows.length / page_num; j++) 
+                            a(href='/board/page/' + (j + 1)) &nbsp#{j+1}&nbsp
