--- a/views/write.pug
+++ b/views/write.pug
@@ -11,7 +11,7 @@ html
                     tr
                         td 작성자
                         td
-                            input#name(type='text' name='name' required='')
+                            input#name(type='text' name='userid' required='')
                     tr
                         td 제목
                         td
