--- a/views/read.pug
+++ b/views/read.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang="ko")
     head
         title #{title}
     body
@@ -11,7 +11,7 @@ html
                     tr
                         td 작성자
                         td
-                            input#name(type='text' name='name' value=rows.name required='')
+                            input#name(type='text' name='userid' value=rows.userid required='')
                     tr
                         td 제목
                         td
