--- a/views/write.pug
+++ b/views/write.pug
@@ -23,7 +23,7 @@ html
                     tr
                         td 패스워드
                         td
-                            input#passwd(type='password' name='passwd' required='')
+                            input#passwd(type='password' name='passwd')
                     tr
                         td(colspan='2')
                             button(type='submit') 글쓰기
