--- a/views/garen.ejs
+++ b/views/garen.ejs
@@ -5,57 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .main-container {
-            background-color: aqua;
-            display: flex;
-            width: 1000px;
-            height: auto;
-            text-align: center;
-            margin: auto;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 15%;
-        }
-        .content-container {
-            margin: auto;
-            padding: auto;
-            padding-bottom: 3%;
-        }
-        img {
-            width: 270px;
-            height: auto;
-        }
-        .liner {
-            width: 90%;
-            display: flex;
-            padding: auto;
-            padding-bottom: 1%;
-        }
-
-        .buy {
-            position: relative;
-            cursor: pointer;
-            font-weight: 500;
-        }
-
-        .btn-box {
-            position: relative;
-            left: 13%;
-            padding: auto;
-            margin: auto;
-            /* background-color: blue; */
-        }
-        .money-icon {
-            width: 13px;
-            height: auto;
-            padding-right: 1%;
-        }
-
-        #test {
-            margin-left: 8%;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/garen.css">
     <script type="module" defer src='./front.js'></script>
 </head>
 <body>
@@ -143,7 +93,7 @@
                 </form>
             </div>
         </div>
-        
+
         <div class="liner">
             <div class="content-container">
                 <div class="skin-container">
