211207_메인페이지_헤더부분제외.
메인이외 페이지 헤더적용시
head 에 header.css 링크추가.
본문 header 에 header 인클루드.

--- a/views/header.pug
+++ b/views/header.pug
@@ -1,5 +1,4 @@
-header
-  nav.navbar
+nav.navbar
     .nav_logo
       a(href='#')
         img(src='/img/main/Logo_03_999x451.png', style='width: 130px; height: 50px;')
@@ -11,7 +10,7 @@ header
         form(action='', method='get')
           input(type='submit', value='캐릭터DB')
       li
-        form(action='/skinTrade', method='get')
+        form(action='skinTrade', method='get')
           input(type='submit', value='캐릭터스킨')
       li
         form(action='/board/page', method='get')
@@ -32,3 +31,5 @@ header
       .line1
       .line2
       .line3
+
+script(src='/js/header.js', type='text/javascript' defer)
