--- a/views/index.pug
+++ b/views/index.pug
@@ -5,41 +5,10 @@ head(lang="ko")
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
   title Document
   link(rel='stylesheet', href='/css/index.css', type='text/css')
+  link(rel='stylesheet', href='/css/header.css', type='text/css')
   script(src='./js/maintest.js' defer)
 header
-  nav.navbar
-    .nav_logo
-      a(href='#')
-        img(src='/img/main/Logo_03_999x451.png', style='width: 130px; height: 50px;')
-    ul.nav_menu
-      li
-        form(action='', method='get')
-          input(type='submit', value='HOME')
-      li
-        form(action='', method='get')
-          input(type='submit', value='캐릭터DB')
-      li
-        form(action='skinTrade', method='get')
-          input(type='submit', value='캐릭터스킨')
-      li
-        form(action='/board/page', method='get')
-          input(type='submit', value='커뮤니티')
-    ul.nav_signUp
-      if(!loginstate)
-        li
-          input(type='button' value='회원가입' id='signup')
-        li
-          input(type='button' value='로그인' id='login')
-      if(loginstate == "okay")
-        li
-          input(type='button' value='마이페이지' id='mypage')
-        li
-          form(id="logoutbtn" action='/logout' method='POST')
-            button#logoutBtn(type='submit') 로그아웃
-    .nav_toggleBtn
-      .line1
-      .line2
-      .line3
+  include ./header.pug
 main
   section.forWheelPage
     .sec_1_container
@@ -93,5 +62,5 @@ main
         img.sec_2_sideImage.sec_2_sideImagerightSize(src='/img/main/champion_right.png')
 div(style='position: fixed; bottom: 20px; right: 20px; font-weight: 600;')
   a(href='#') TOP
-script(src='/js/index.js', type='text/javascript')
+script(src='/js/index.js', type='text/javascript' defer)
 script(type='text/javascript', src='http://code.jquery.com/jquery-1.12.4.min.js')
