211207_재업로드_안성준

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ head(lang="ko")
   title Document
   link(rel='stylesheet', href='/css/index.css', type='text/css')
   link(rel='stylesheet', href='/css/header.css', type='text/css')
-  script(src='./js/maintest.js' defer)
+  script(src='./js/maintest.js', type='text/javascript' defer)
 header
   include ./header.pug
 main
@@ -62,5 +62,5 @@ main
         img.sec_2_sideImage.sec_2_sideImagerightSize(src='/img/main/champion_right.png')
 div(style='position: fixed; bottom: 20px; right: 20px; font-weight: 600;')
   a(href='#') TOP
-script(src='/js/index.js', type='text/javascript' defer)
+script(src='./js/index.js', type='text/javascript' defer)
 script(type='text/javascript', src='http://code.jquery.com/jquery-1.12.4.min.js')
