--- a/views/index.pug
+++ b/views/index.pug
@@ -64,4 +64,4 @@ body
     a(href='#') TOP
   script(src='./js/index.js', type='text/javascript' defer)
   script(type='text/javascript', src='http://code.jquery.com/jquery-1.12.4.min.js')
-  script(src='./js/maintest.js', type='text/javascript')
+  //- script(src='./js/maintest.js', type='text/javascript')
