--- a/views/page.pug
+++ b/views/page.pug
@@ -1,8 +1,14 @@
 doctype html
-html(lang="ko")
-    head
-        title #{title}
-    body 
+head(lang="ko")
+  meta(charset='UTF-8')
+  meta(http-equiv='X-UA-Compatible', content='IE=edge')
+  meta(name='viewport', content='width=device-width, initial-scale=1.0')
+  title Document
+  link(rel='stylesheet', href='/css/header.css', type='text/css')
+body 
+    header 
+        include ./header.pug
+    main
         h1 #{title}
         a(href='/') main
         span &nbsp&nbsp
@@ -35,3 +41,4 @@ html(lang="ko")
                         -for (var j = 0; j < rows.length / page_num; j++) 
                             a(href='/board/page/' + (j + 1)) #{j+1}
                             span &nbsp&nbsp
+    
