--- a/views/boardpage.pug
+++ b/views/boardpage.pug
@@ -3,7 +3,7 @@ head(lang="ko")
   meta(charset='UTF-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
-  title Document
+  title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
 body 
     header 
