--- a/views/header.pug
+++ b/views/header.pug
@@ -1,6 +1,6 @@
 nav.navbar
     .nav_logo
-      a(href='#')
+      a(href='/')
         img(src='/img/main/Logo_03_999x451.png', style='width: 130px; height: 50px;')
     ul.nav_menu
       li
