--- a/views/read.pug
+++ b/views/read.pug
@@ -11,8 +11,7 @@ html(lang="ko")
                     tbody
                         tr
                             td 작성자
-                            td
-                                input#name(type='text' name='userid' value=rows.userid required='')
+                            td #{rows.userid}
                         tr
                             td 제목
                             td
