--- a/views/write.pug
+++ b/views/write.pug
@@ -10,8 +10,7 @@ html
                 tbody
                     tr
                         td 작성자
-                        td
-                            input#name(type='text' name='userid' required='')
+                        td #{userid}
                     tr
                         td 제목
                         td
