--- a/views/header.pug
+++ b/views/header.pug
@@ -4,7 +4,7 @@ nav.navbar
         img(src='/img/main/Logo_03_999x451.png', style='width: 130px; height: 50px;')
     ul.nav_menu
       li
-        form(action='', method='get')
+        form(action='/', method='get')
           input(type='submit', value='HOME')
       li
         form(action='', method='get')
