--- a/views/read.pug
+++ b/views/read.pug
@@ -5,7 +5,8 @@ head(lang="ko")
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
-body 
+  link(rel='stylesheet', href='/css/table.css', type='text/css')
+body(style="text-align : center")
     header 
         include ./header.pug
     main
