--- a/views/garen.pug
+++ b/views/garen.pug
@@ -1,166 +1,74 @@
 doctype html
-html(lang="ko")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-        script(src="/js/front.js" defer)
-        link(rel="stylesheet" type='text/css' href="/css/garen.css") 
-    body
-        div(class="main-container")
-            div(class="liner")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen0.jpg')
-                    div(class="text-box") 가렌
-                    div(class="price")
-                        div(class="price")
-                            img(class="money-icon" src="./money.png")
-                            span(class="test") 20
-                    form(action='/Garen_Garen0' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen1.jpg')
-                    div(class="text-box") 강철 군단 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 30
-                    form(action='/Garen_Garen1' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
+head
+  meta(charset='UTF-8')
+  meta(http-equiv='X-UA-Compatible', content='IE=edge')
+  meta(name='viewport', content='width=device-width, initial-scale=1.0')
+  title Document
+  style.
+    .main-container {
+    background-color: aqua;
+    display: flex;
+    width: 1000px;
+    height: auto;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 15%;
+    }
+    .content-container {
+    margin: auto;
+    padding: auto;
+    padding-bottom: 3%;
+    }
+    img {
+    width: 270px;
+    height: auto;
+    }
+    .liner {
+    width: 90%;
+    display: flex;
+    padding: auto;
+    padding-bottom: 1%;
+    }
+    .buy {
+    position: relative;
+    cursor: pointer;
+    font-weight: 500;
+    }
+    .btn-box {
+    position: relative;
+    left: 16%;
+    padding: auto;
+    margin: auto;
+    /* background-color: blue; */
+    }
+    .money-icon {
+    width: 13px;
+    height: auto;
+    padding-right: 1%;
+    }
+    #test {
+    margin-left: 8%;
+    }
+  script(type='module', src='./front.js')
+
+body  
+    .main-container
+        - for (let i=0; i<test.length; i++)
+            if (i%3==0)
+                .liner  
+                            
+            .content-container
+                .skin-container
+                    img(src= '/' + test[i].imgsrc)
+                .text-box #{test[i].skin}
+                .price
+                    .price
+                    img.money-icon(src='./money.png')
+                    span.test 20
+                form(action='/'+test[i].imgsrc, method='post')
+                    .btn-box
+                        input.buy(type='button', value='구매하기')
                         
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen2.jpg')
-                    div(class="text-box") 공포의 기사 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen2' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-
-            
-            div(class="liner")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen3.jpg')
-                    div(class="text-box") 대장군 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen3' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen4.jpg')
-                    div(class="text-box") 데마시아 강력반 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen4' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                        
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen5.jpg')
-                    div(class="text-box") 메카 삼국 가렌 프레스티지 에디션
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen5' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-
-            div(class="liner")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen6.jpg')
-                    div(class="text-box") 메카 삼국 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 50
-                    form(action='/Garen_Garen6' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen7.jpg')
-                    div(class="text-box") 방랑자 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen7' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen8.jpg')
-                    div(class="text-box") 사막 특전사 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 30
-                    form(action='/Garen_Garen8' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-
-            div(class="liner")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen9.jpg')
-                    div(class="text-box") 신성왕 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen9' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen10.jpg')
-                    div(class="text-box") 전투사관학교 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 50
-                    form(action='/Garen_Garen10' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen11.jpg')
-                    div(class="text-box") 특공대 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen11' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-
-            div(class="liner")
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen12.jpg')
-                    div(class="text-box") 핏빛 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 40
-                    form(action='/Garen_Garen12' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
-
-                div(class="content-container")
-                    div(class="skin-container")
-                        img(src='./skin/Garen/Garen13.jpg')
-                    div(class="text-box") 흉포한 제독 가렌
-                    div(class="price")
-                        img(class="money-icon" src="./money.png")
-                        span(class="test") 50
-                    form(action='/Garen_Garen13' method="post")
-                        div(class="btn-box")
-                            input(type="button" class="buy" value="구매하기")
+        
