--- a/views/garen.pug
+++ b/views/garen.pug
@@ -67,7 +67,7 @@ body
                     .price
                     img.money-icon(src='./money.png')
                     span.test #{test[i].money}
-                form(action='/'+test[i].imgsrc, method='post')
+                form(action='/'+(test[i].imgsrc.split('/')[3]).split('.')[0], method='post')
                     .btn-box
                         input.buy(type='button', value='구매하기')
                         
