--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,8 @@ body
   header
     include ./header.pug
   main
+    include ./infoBox.pug
+
     section.forWheelPage
       .sec_1_container
         .leftPopupContainer.lefyPopupDelay
