--- a/views/garen.pug
+++ b/views/garen.pug
@@ -51,9 +51,12 @@ head
     #test {
     margin-left: 8%;
     }
-  script(type='module', src='./front.js')
+  script(type='module', src='/js/front.js')
+  link(rel='stylesheet', href='/css/header.css', type='text/css')
 
-body  
+body
+    header 
+        include ./header.pug
     .main-container
         - for (let i=0; i<test.length; i++)
             if (i%3==0)
@@ -65,9 +68,10 @@ body
                 .text-box #{test[i].skin}
                 .price
                     .price
-                    img.money-icon(src='./money.png')
+                    img.money-icon(src='/img/money.png')
                     span.test #{test[i].money}
-                form(class='form' action='/skin/'+(test[i].imgsrc.split('/')[3]).split('.')[0], method='post')
+                //- test[i] = img/skin/Garen/Garen_0.jpg
+                form(class='form' action='/skin/'+ (test[i].imgsrc.split('/')[3]).split('.')[0], method='post')
                     .btn-box
                         input.buy(type='button', value='구매하기')
                         
