211209_회원가입.로그인.css_안성준
회원가입 페이지
로그인 페이지
css 적용

--- a/views/infoBox.pug
+++ b/views/infoBox.pug
@@ -8,7 +8,7 @@ head
 .infoBoxContainer
   .infoBox
     .infoBoxUserID
-      a(href='') id&#xAC00; &#xB4E4;&#xC5B4;&#xC62C; &#xACF3;.
+      a(href="") id가 들어올곳.
     br
     .infoBoxUserPoint
-      a(href='') point&#xAC00; &#xB4E4;&#xC5B4;&#xC62C; &#xACF3;.
+      a(href="") point가 들어올곳.
