--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,30 +6,47 @@ head
   title &#xD68C;&#xC6D0;&#xAC00;&#xC785;
   script(src='/js/signup.js', defer='')
   script(src='//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js')
-  link(rel='stylesheet', type='text/css', href='../css/signup.css')
-div(style='width: 520px; height: 300px; background-color: red; display:table; padding: 15px;')
-  div(style='background-color: yellow; border: 3px solid rgb(226, 164, 71); border-radius: 15px; display: table-cell;')
+  link(rel='stylesheet', type='text/css', href='./css/signupLoginPopup.css')
+.signupPopupContainer
+  .signupPopupBox
     form#signupSubmit(action='/signup', method='POST')
       div
-        label(for='userid') ID : 
-        input#userid(name='id', type='text', require='', placeholder='ID를 입력하세요', checkresult='fail')
-      div
-        label(for='pwd') &#xBE44;&#xBC00;&#xBC88;&#xD638; : 
-        input#pwd(name='password', type='password', require='', placeholder='비밀번호를 입력하세요')
-      div
-        label(for='checkPwd') &#xBE44;&#xBC00;&#xBC88;&#xD638; &#xD655;&#xC778; : 
-        input#checkPwd(type='password', require='', placeholder='비밀번호를 입력하세요')
-      div
-        label(for='username') &#xC774;&#xB984; : 
-        input#username(name='username', require='', placeholder='이름을 입력하세요')
-      div
-        label(for='email') &#xC774;&#xBA54;&#xC77C; : 
-        input#email(name='email', require='', placeholder='이메일을 입력하세요')
-      div
-        label(for='addr') &#xC8FC;&#xC18C; :
-        input#addr(name='address', type='text', require='', placeholder='주소를 입력하세요', readonly='')
-      div
-        label(for='addrDet') &#xC0C1;&#xC138; &#xC8FC;&#xC18C; : 
-        input#addrDet(name='addressdet', require='', placeholder='상세 주소를 입력하세요')
-      br
-      button#signUpBtn(type='submit') &#xD68C;&#xC6D0;&#xAC00;&#xC785;
+        .mainTitle
+          | &#xD68C;&#xC6D0;&#xAC00;&#xC785;
+        .signupInputBox
+          .signupSubTitle
+            label(for='userid') ID : 
+          .signupInput
+            input#userid(name='id', type='text', require='', placeholder='ID를 입력하세요', checkresult='fail')
+        .signupInputBox
+          .signupSubTitle
+            label(for='pwd') &#xBE44;&#xBC00;&#xBC88;&#xD638; : 
+          .signupInput
+            input#pwd(name='password', type='password', require='', placeholder='비밀번호를 입력하세요')
+        .signupInputBox
+          .signupSubTitle
+            label(for='checkPwd') &#xBE44;&#xBC00;&#xBC88;&#xD638; &#xD655;&#xC778; : 
+          .signupInput
+            input#checkPwd(type='password', require='', placeholder='비밀번호를 입력하세요')
+        .signupInputBox
+          .signupSubTitle
+            label(for='username') &#xC774;&#xB984; : 
+          .signupInput
+            input#username(name='username', require='', placeholder='이름을 입력하세요')
+        .signupInputBox
+          .signupSubTitle
+            label(for='email') &#xC774;&#xBA54;&#xC77C; : 
+          .signupInput
+            input#email(name='email', require='', placeholder='이메일을 입력하세요')
+        .signupInputBox
+          .signupSubTitle
+            label(for='addr') &#xC8FC;&#xC18C; :
+          .signupInput
+            input#addr(name='address', type='text', require='', placeholder='주소를 입력하세요', readonly='')
+        .signupInputBox
+          .signupSubTitle
+            label(for='addrDet') &#xC0C1;&#xC138; &#xC8FC;&#xC18C; : 
+          .signupInput
+            input#addrDet(name='addressdet', require='', placeholder='상세 주소를 입력하세요')
+      .signUpBtnBox
+        button#signUpBtn.signUpBtn(type='submit') &#xD68C;&#xC6D0;&#xAC00;&#xC785;
